# particle-systems-simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/common/: AngularSpringForce.h  CircularWireConstraint.h  ConstraintSolver.h  FixedConstraint.h  Force.h  Gravity.h  Particle.h  RodConstraint.h  Scene.h  SlidingConstraint.h  SpringForce.h  Wall.h
include/linux/gfx/: gfx.h  vec4.h
include/windows/gfx/: config.h  gfx.h
src/: AngularSpringForce.cpp  CircularWireConstraint.cpp  ConstraintSolver.cpp  FixedConstraint.cpp  Force.cpp  Gravity.cpp  Particle.cpp  ParticleToy.cpp  RodConstraint.cpp  Scene.cpp  SlidingConstraint.cpp  Solver.cpp  SpringForce.cpp  Wall.cpp
